<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lytContenedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/SirName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sir_name" />

    <EditText
        android:id="@+id/txtSirName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/cb_politely"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/politely" />

    <Button
        android:id="@+id/btnGreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greet" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset" />

    <TextView
        android:id="@+id/Greet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emptyText" />

</LinearLayout>